--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
   <script src="view2/view2.js"></script>
   <script src="api/api.js"></script>
   <script src="tenant/tenant.js"></script>
+  <script src="components/aria/aria_service.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
